Bug 529334 - [9][testsources][launching] Add --add-reads m=ALL-UNNAMED if launching with test code and non-empty build classpath
Change-Id: I425a4cbc240925e870ae8905eb61c0e8736d83ee